# commander-spellbook-backend

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  deleteme.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  git-release  pytest.ini  requirements.txt
backend/: .dockerignore  .env  .flake8  Dockerfile  Dockerfile.kubernetes  README.md  data.json  docker-compose.aws.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.in  requirements.txt  schema.yml  setup_cython.py
backend/.kubernetes/: jobs.yaml  kubernetes.yaml
backend/.kubernetes/discord-bot/: kubernetes.yaml
backend/.kubernetes/migration/: kube.migration.yaml  kustomization.yaml
backend/.kubernetes/reddit-bot/: kubernetes.yaml
backend/.kubernetes/worker/: kubernetes.yaml
backend/backend/: README.md  asgi.py  debug_settings.py  pagination.py  production_settings.py  settings.py  spectacular.py  urls.py  worker_settings.py  wsgi.py
backend/backend/admin/: __init__.py  log_admin.py  task_result_admin.py
backend/backend/login/: discord.py  jwt.py
backend/backend/pipeline/: discord.py
backend/backend/social/: discord.py
backend/backend/templates/: context.py
backend/backend/tests/: test_rest_api.py  test_schema.py
backend/backend/views/: users.py
backend/common/: abstract_test_case.py  abstractions.py  hybridrouter.py  inspection.py  itertools.py  itertools_utils.py  markdown.py  markdown_utils.py  pypy_utils.py  query.py  serializers.py  stream.py  testing.py  utils.py
backend/common/tests/: test_itertools.py  test_markdown.py  test_serializers.py
backend/nginx/: Dockerfile  demo.conf  nginx.conf  production.conf  ssl.conf
backend/spellbook/: README.md  admin.py  apps.py  atomic_patch.py  hybridrouter.py  models.py  pulp_patch.py  scryfall.py  serializers.py  signals.py  symbols.py  tests.py  urls.py  utils.py  validators.py  variants.py  views.py
backend/spellbook/admin/: __init__.py  card_admin.py  combo_admin.py  feature_admin.py  feature_attribute_admin.py  ingredient_admin.py  job_admin.py  log_admin.py  mixins.py  template_admin.py  utils.py  variant_admin.py  variant_alias_admin.py  variant_suggestion_admin.py  variant_update_suggestion_admin.py
backend/spellbook/management/: abstract_command.py  edhrec.py  s3_upload.py  scryfall.py
backend/spellbook/migrations/: 0001_initial.py  0002_add_legalities_and_prices.py  0002_add_legalities_reprints_and_prices.py  0002_alter_card_identity_alter_variant_identity.py  0002_alter_card_name_alter_card_oracle_id_and_more.py  0002_alter_cardincombo_battlefield_card_state_and_more.py  0002_alter_combo_cards_state_alter_combo_description_and_more.py  0002_alter_combo_mana_needed_alter_variant_mana_needed.py  0002_remove_cardincombo_card_state_and_more.py  0002_templaterequiredinvariantsuggestion_scryfall_query.py  0003_alter_cardincombo_battlefield_card_state_and_more.py  0003_alter_variant_status.py  0003_alter_variantsuggestion_description.py  0003_card_identity_variant_identity_and_more.py  0003_cardinvariantsuggestion_templateinvariantsuggestion_and_more.py  0003_cardusedinvariantsuggestion_and_more.py  0003_remove_variant_frozen.py  0003_variant_popularity_and_django5_fields.py  0004_alter_cardincombo_battlefield_card_state_and_more.py  0004_alter_cardusedinvariantsuggestion_card_and_more.py  0004_alter_combo_mana_needed_alter_variant_mana_needed.py  0004_alter_variant_produces.py  0004_new_card_fields.py  0004_template_template_card_template_name_index.py  0004_update_card_fields.py  0005_add_back_altered_generated_fields.py  0005_alter_combo_mana_needed_and_more.py  0005_alter_feature_name_and_more.py  0005_alter_template_options_combo_requires_and_more.py  0005_alter_variant_status.py  0005_remove_cardincombo_zone_location_and_more.py  0006_alter_combo_mana_needed_and_more.py  0006_alter_template_scryfall_query.py  0006_cardincombo_must_be_commander_and_more.py  0006_combo_generator.py  0006_variant_line_counts_and_nullable_popularity.py  0007_add_variant_alias.py  0007_alter_feature_name_alter_template_name.py  0007_alter_template_scryfall_query.py  0007_combo_removes.py  (+104 more)
backend/spellbook/models/: __init__.py  card.py  combo.py  constants.py  feature.py  feature_attribute.py  fields.py  generation_state.py  ingredient.py  job.py  mixins.py  playable.py  recipe.py  scryfall.py  suggestion.py  template.py  utils.py  validators.py  variant.py  variant_alias.py  variant_suggestion.py  variant_update_suggestion.py
backend/spellbook/parsers/: __init__.py  color_parser.py  lark_validator.py  scryfall_query_grammar.lark  scryfall_query_grammar.py  scryfall_query_parser.py  variants_query.py  variants_query_grammar.lark  variants_query_grammar.py  variants_query_parser.py
backend/spellbook/patches/: __init__.py  admin.py
backend/spellbook/regexs/: __init__.py  compiled.py
backend/spellbook/serializers/: __init__.py  bracket_tag_serializer.py  card_detail_serializer.py  card_serializer.py  combo_detail_serializer.py  combo_serializer.py  feature_serializer.py  legalities_serializer.py  prices_serializer.py  template_serializer.py  user_serializer.py  utils.py  variant_alias_serializer.py  variant_serializer.py  variant_suggestion_serializer.py  variant_update_suggestion_serializer.py
backend/spellbook/tasks/: __init__.py  combo_of_the_day.py  discord_webhook.py  edhrec.py  export_variants.py  generate_variants.py  notify.py  s3_upload.py  scryfall.py  update_cards.py  update_variants.py  utils.py
backend/spellbook/templatetags/: mana.py
backend/spellbook/tests/: abstract_test.py  inspection.py  populate_db.py  test_commands.py  test_models.py  test_tasks.py  (+5 more)
backend/utils/: s3_upload.py
backend/website/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
bot/reddit/: .env  Dockerfile  pyproject.toml  requirements.in  requirements.txt  spellbook_reddit.py
client/python/: .gitignore  .openapi-generator-ignore  anonymous_spellbook_client.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
(+243 files in other folders)
