[project]
name = "spellbook-backend"
description = "Commander Spellbook Django backend and REST API."
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "anytree==2.13.0",
    "boto3==1.43.51",
    "Django==6.0.7",
    "django-filter==26.1",
    "django-cors-headers==4.9.0",
    "django-admin-sortable2==2.3.1",
    "djangorestframework==3.17.1",
    "djangorestframework-camel-case==1.4.2",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.30.0",
    "drf-spectacular-sidecar==2026.7.1",
    "social-auth-app-django==6.0.0",
    "django-tasks==0.12.0",
    "discord-webhook==1.4.1",
    "lark==1.3.1",
]

[project.urls]
homepage = "https://github.com/SpaceCowMedia/commander-spellbook-backend"

[project.scripts]
manage = "manage:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["backend", "common", "spellbook", "website"]
force-include = { "manage.py" = "manage.py" }

# Cython shells out to setuptools, whose package auto-discovery fails on this multi-package
# flat layout. Declaring the module list explicitly disables that discovery. The real build
# backend is hatchling, which ignores this table.
[tool.setuptools]
py-modules = []

[dependency-groups]
prod = ["gunicorn", "psycopg[binary]"]
cython = ["cython", "setuptools"]
dev = [
    "tblib",
    "django-debug-toolbar",
    "flake8",
    "pytest-django",
    # This test runner also executes client/python/tests, which import spellbook_client
    # from source (PYTHONPATH), so the client's runtime dependencies are mirrored here.
    "aiohttp==3.14.1",
    "aiohttp-retry==2.9.1",
    "lazy-imports==1.2.0",
    "pydantic==2.13.4",
    "python-dateutil==2.9.0.post0",
    "urllib3==2.7.0",
    "django-stubs[compatible-mypy]>=6.0.7",
]

[tool.uv]
# Supply chain attack defense - don't use packages published within 1 day
# (matches the Dependabot cooldown).
exclude-newer = "1 day"
managed = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
# The importable roots mirror pytest's `pythonpath = backend common` (this file lives in backend/).
mypy_path = ["$MYPY_CONFIG_FILE_DIR", "$MYPY_CONFIG_FILE_DIR/../common"]
explicit_package_bases = true
namespace_packages = true
# Allow rebinding a local to a new type (e.g. `quantity = int(quantity)`), a common idiom here.
allow_redefinition = true
# Third-party packages without stubs (boto3, lark, social_django...) shouldn't fail the run.
ignore_missing_imports = true
# Pragmatic baseline for a codebase adopting mypy: type errors are reported, but unannotated
# function bodies are not forced. Tighten these over time.
check_untyped_defs = false
# Silence the informational "body of untyped function not checked" notes that the above emits;
# they are advisory, not errors. Drop this once check_untyped_defs is turned on.
disable_error_code = ["annotation-unchecked"]

[tool.django-stubs]
django_settings_module = "backend.settings"
