[project]
name = "spellbook-reddit-bot"
description = "Commander Spellbook Reddit bot."
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "asyncpraw==8.0.2",
    # spellbook_client is provided on PYTHONPATH rather than installed, so its runtime
    # dependencies are listed here.
    "urllib3==2.7.0",
    "python-dateutil==2.9.0.post0",
    "aiohttp==3.14.1",
    "aiohttp-retry==2.9.1",
    "pydantic==2.13.4",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
only-include = ["spellbook_reddit.py"]

[tool.uv]
# Supply chain attack defense - don't use packages published within 1 day
# (matches the Dependabot cooldown).
exclude-newer = "1 day"
managed = true
